projects/poc/argo-app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: argo-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argo-app
    spec:
      containers:
        - name: api
          image: vlimanu/argocd-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 128Mi
