projects/poc/argo-app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: argo-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: argo-app
  ports:
    - name: http
      port: 8000
      targetPort: http
