projects/poc/argo-app/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-app
spec:
  ingressClassName: traefik
  rules:
    - host: argo-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argo-app
                port:
                  number: 8000
